--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,6 +4,7 @@
 	{%- include head.html -%}
 </head>
 <body>
+	<img height="200" src="https://eager-app-images.imgix.net/vzRQTqtxRJuTcLXE3bKW_SideNav-video.gif" />
 	<header class="texture-{{ site.texture.style }}">
 		<div class="container">
 			{%- include nav.html -%}
