--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ layout: page
 			<a class="post-link" href="{{ post.url | relative_url }}">
 				<h2 class="post-title">{{ post.title | escape }}</h2>
 			</a>
-			<div class="post-date"><i class="icon-calendar"></i>{{ post.date | date: date_format }}</div>
+			<span class="post-date"><i class="icon-calendar"></i>{{ post.date | date: date_format }}</span>
 		</div>
 		<div class="post">
 			{%- if site.show_excerpts -%}
