--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,8 +9,8 @@ layout: page
 		{%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
 		<div class="post-meta">
 			<a class="post-link" href="{{ post.url | relative_url }}">
-				<h2 class="post-title">{{ post.title | escape }}</h2>
-			</a>
+				<strong class="post-title">{{ post.title | escape }}</strong>
+			</a> &nbsp;&nbsp;
 			<span class="post-date"><i class="icon-calendar"></i>{{ post.date | date: date_format }}</span>
 		</div>
 		<div class="post">
