--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -1,15 +1,15 @@
 <div class="container">
-	<h1>{{ site.texture.title }}</h1>
-	<h2>{{ site.texture.tagline }}</h2>
+	<h1>{{ site.setting.title }}</h1>
+	<h2>{{ site.setting.tagline }}</h2>
 	<ul class="social">
-		{%- if site.texture.social_links.github -%}
-			<a href="https://github.com/{{ site.texture.social_links.github }}"><li><i class="icon-github-circled"></i></li></a>
+		{%- if site.setting.social_links.github -%}
+			<a href="https://github.com/{{ site.setting.social_links.github }}"><li><i class="icon-github-circled"></i></li></a>
 		{%- endif -%}
-		{%- if site.texture.social_links.linkedIn -%}
-			<a href="https://linkedin.com/{{ site.texture.social_links.linkedIn }}"><li><i class="icon-linkedin-squared"></i></li></a>
+		{%- if site.setting.social_links.linkedIn -%}
+			<a href="https://linkedin.com/{{ site.setting.social_links.linkedIn }}"><li><i class="icon-linkedin-squared"></i></li></a>
 		{%- endif -%}
-		{%- if site.texture.social_links.twitter -%}
-			<a href="https://twitter.com/{{ site.texture.social_links.twitter }}"><li><i class="icon-twitter-squared"></i></li></a>
+		{%- if site.setting.social_links.twitter -%}
+			<a href="https://twitter.com/{{ site.setting.social_links.twitter }}"><li><i class="icon-twitter-squared"></i></li></a>
 		{%- endif -%}
 	</ul>
 </div>
