--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@
 	{%- include head.html -%}
 </head>
 <body>
-	<header class="texture-{{ site.texture.style }}">
+	<header bgcolor="black">
 		<div class="container">
 			{%- include nav.html -%}
 		</div>
