--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@
 	{%- include head.html -%}
 </head>
 <body>
-	<header  style="background-color:black;">
+	<header  class="style-black">
 		<div class="container">
 			{%- include nav.html -%}
 		</div>
