--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@
 	{%- include head.html -%}
 </head>
 <body>
-	<header  data-theme="dark">
+	<header  class="style-black" data-theme="dark">
 		<div class="container">
 			{%- include nav.html -%}
 		</div>
