--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@
   {%- include head.html -%}
 </head>
 <body>
-  <header class="texture-{{ site.texture.style }}">
+  <header class="style-black" data-theme="dark">
     <div class="container">
       {%- include nav.html -%}
     </div>
