--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -1,15 +1,5 @@
 <div class="container">
 	<h1>{{ site.setting.title }}</h1>
-	<h2>{{ site.setting.tagline }}</h2>
-	<ul class="social">
-		{%- if site.setting.social_links.github -%}
-			<a href="https://github.com/{{ site.setting.social_links.github }}"><li><i class="icon-github-circled"></i></li></a>
-		{%- endif -%}
-		{%- if site.setting.social_links.linkedIn -%}
-			<a href="https://linkedin.com/{{ site.setting.social_links.linkedIn }}"><li><i class="icon-linkedin-squared"></i></li></a>
-		{%- endif -%}
-		{%- if site.setting.social_links.twitter -%}
-			<a href="https://twitter.com/{{ site.setting.social_links.twitter }}"><li><i class="icon-twitter-squared"></i></li></a>
-		{%- endif -%}
-	</ul>
+	<span>{{ site.setting.tagline }}</span>
+	
 </div>
