--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
-{%- if site.texture.showNav -%}
+{%- if site.setting.showNav -%}
 <div class="navbar">
 	<ul>
-		{% for link in site.texture.navigation %}
+		{% for link in site.setting.navigation %}
 		<a href="{{ link.url | prepend:site.baseurl }}"><li {% if link.url == page.url %}class="active"{% endif %} >{{ link.title }}</li></a>
 		{% endfor %}
 	</ul>
