--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,7 @@
   <header">
     <div class="container">
       {%- include nav.html -%}
+       <a href="/">Back to Home</a>
     </div>
     {%- include post_header.html -%}  
   </header>
