--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@
   <header">
     <div class="container">
       {%- include nav.html -%}
-       <a href="/">Back to Home</a>
+       <a href="/">Back to Home</a>&nbsp;
     </div>
     {%- include post_header.html -%}  
   </header>
